Update for new mbot package organization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,9 @@ project(system_monitor)
 find_package(catkin)
 
 catkin_package()
+
+install(DIRECTORY bin
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  PATTERN "*.py"
+  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+)
